--- a/Acad_SheetSet/source/Numeration/NumerationView.xaml
+++ b/Acad_SheetSet/source/Numeration/NumerationView.xaml
@@ -1,52 +1,91 @@
 ﻿<wpf:BaseWindow x:Class="Acad_SheetSet.Numeration.NumerationView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Acad_SheetSet.Numeration"
-        xmlns:wpf="clr-namespace:NetLib.WPF;assembly=NetLib"
-        xmlns:select="clr-namespace:Acad_SheetSet.Select"
-        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:converters="clr-namespace:NetLib.WPF.Converters;assembly=NetLib"
-        xmlns:nodes="clr-namespace:Acad_SheetSet.Data.Nodes"
-        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        d:DataContext="{d:DesignInstance local:NumerationVM, IsDesignTimeCreatable=True}"
-        mc:Ignorable="d"
-        Title="Нумарация листов подшивки">
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:local="clr-namespace:Acad_SheetSet.Numeration"
+                xmlns:wpf="clr-namespace:NetLib.WPF;assembly=NetLib"
+                xmlns:select="clr-namespace:Acad_SheetSet.Select"
+                xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                xmlns:converters="clr-namespace:NetLib.WPF.Converters;assembly=NetLib"
+                xmlns:nodes="clr-namespace:Acad_SheetSet.Data.Nodes"
+                xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                xmlns:props="clr-namespace:Acad_SheetSet.Props"
+                d:DataContext="{d:DesignInstance local:NumerationVM, IsDesignTimeCreatable=True}"
+                mc:Ignorable="d"
+                Title="Нумарация листов подшивки">
     <Grid>
-		<Grid.Resources>
-			<HierarchicalDataTemplate ItemsSource="{Binding Nodes}" DataType="{x:Type nodes:SubsetNode}" >
-				<TextBlock Text="{Binding Name}" />
-			</HierarchicalDataTemplate>
-			<DataTemplate DataType="{x:Type nodes:SheetNode}">
-                <Grid>
+        <Grid.Resources>
+            <HierarchicalDataTemplate ItemsSource="{Binding Nodes}" DataType="{x:Type nodes:SubsetNode}">
+                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="2"/>
+            </HierarchicalDataTemplate>
+            <DataTemplate DataType="{x:Type nodes:SheetNode}">
+                <Grid >
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
                         <ColumnDefinition />
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Text="{Binding Number}" Margin="1" VerticalAlignment="Center"/>
-                    <TextBlock Grid.Column="1" Text="{Binding Name}" VerticalAlignment="Center"/>
-                    <TextBlock Grid.Column="2" Text="{Binding CrossNumber, StringFormat= - сквозной номер \{0\}}"/>
+                    <TextBlock Grid.Column="0" Text="{Binding Number}" Margin="1,1,5,1" VerticalAlignment="Center" 
+                               ToolTip="Текущий номер листа"/>
+                    <Border Grid.Column="1" Margin="1,1,10,1" Padding="2" Background="LightGreen" ToolTip="Новый номер листа"
+                            mah:VisibilityHelper.IsVisible="{Binding HasNewNumber}">
+                        <TextBlock Text="{Binding NumberNew}" VerticalAlignment="Center"  />
+                    </Border>
+                    <TextBlock Grid.Column="2" Text="{Binding Name}" FontWeight="Medium" VerticalAlignment="Center" Margin="20,1,20,1"/>
+                    <TextBlock Grid.Column="3" Text="{Binding CrossNumber, StringFormat=сквозной \{0\}}" VerticalAlignment="Center"
+                               ToolTip="Текущий сквозной номер" Margin="1"/>
+                    <Border Grid.Column="4" Margin="1,1,10,1" Padding="2" Background="LightGreen" ToolTip="Новый сквозной номер"
+                            mah:VisibilityHelper.IsVisible="{Binding HasNewCrossNumber}">
+                        <TextBlock Text="{Binding CrossNumberNew}" Margin="1" VerticalAlignment="Center"/>
+                    </Border>
                 </Grid>
-			</DataTemplate>
-		</Grid.Resources>
-		<Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-            <RowDefinition/>
+            </DataTemplate>
+        </Grid.Resources>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <select:SSSelectControl Grid.Row="0" DataContext="{Binding Select}"/>
-        <GroupBox Grid.Row="1" Visibility="{Binding Select.SheetSet, 
-            Converter={converters:NullVisibilityConverter}}">
-            <GroupBox.Header>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{Binding Select.SheetSet.Name}" Margin="1"/>
-                    <Button Command="{Binding Update}" Margin="1" Content="{iconPacks:Material Refresh}"/>
-                </StackPanel>
-            </GroupBox.Header>
-            <TreeView ItemsSource="{Binding Select.SheetSet.Nodes}"/>
-        </GroupBox>
-        <ListBox Grid.Row="2" ItemsSource="{Binding Select.SheetSet.Nodes}"/>
+        <select:SSSelectControl Grid.Row="0" DataContext="{Binding Select}" />
+        <TabControl Grid.Row="1" Visibility="{Binding IsSelected}">
+            <TabItem Header="Нумерация">
+                <!--Нумерация-->
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                        <Button Content="{iconPacks:Material ChevronDoubleUp}" Command="{Binding Collapse}" Margin="2" 
+                                ToolTip="Свернуть все"/>
+                        <Button Content="{iconPacks:Material ChevronDoubleDown}" Command="{Binding Expand}" Margin="2" 
+                                ToolTip="Развернуть все"/>
+                    </StackPanel>
+                    <TreeView Grid.Row="1" ItemsSource="{Binding Nodes}">
+                        <TreeView.ItemContainerStyle>
+                            <Style TargetType="{x:Type TreeViewItem}">
+                                <Setter Property="IsExpanded"
+                                        Value="{Binding RelativeSource={RelativeSource FindAncestor, 
+                            AncestorType={x:Type Window}}, Path=DataContext.ExpandTreeView, UpdateSourceTrigger=PropertyChanged}" />
+                            </Style>
+                        </TreeView.ItemContainerStyle>
+                    </TreeView>
+                    <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="5" HorizontalAlignment="Center"
+                                Visibility="{Binding IsSelected}">
+                        <Button Command="{Binding Update}" Margin="10,1,10,1" Content="{iconPacks:Material Refresh}"
+                                ToolTip="Обновить список листов подшивки и номеров" />
+                        <Button Content="Нумерация" Command="{Binding Numeration}" Margin="2"
+                                ToolTip="Нумерация листов подшивки" />
+                    </StackPanel>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Свойства" mah:VisibilityHelper.IsVisible="{Binding IsBimUser}">
+                <props:PropsView DataContext="{Binding PropsVM}"/>
+            </TabItem>
+        </TabControl>
     </Grid>
 </wpf:BaseWindow>
