Опубликовал. Передал на тест.

--- a/Acad_SheetSet/source/Batch/BatchView.xaml
+++ b/Acad_SheetSet/source/Batch/BatchView.xaml
@@ -79,7 +79,7 @@
                 <Grid Grid.Column="0" Margin="2">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
-                        <RowDefinition />
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Row="0" Text="Команда исполнения для файлов:" />
                     <TextBox Grid.Row="1" Text="{Binding Options.FileExecute}" />
@@ -87,7 +87,7 @@
                 <Grid Grid.Column="1" Margin="2">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
-                        <RowDefinition />
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Row="0" Text="Команда исполнения для листов:" />
                     <TextBox Grid.Row="1" Text="{Binding Options.LayoutExecute}" />
