--- a/Acad_SheetSet/source/Numeration/NumerationView.xaml
+++ b/Acad_SheetSet/source/Numeration/NumerationView.xaml
@@ -1,26 +1,32 @@
-﻿<wpf:BaseWindow x:Class="Acad_SheetSet.Numeration.NumerationView"
-                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                xmlns:local="clr-namespace:Acad_SheetSet.Numeration"
-                xmlns:wpf="clr-namespace:NetLib.WPF;assembly=NetLib"
-                xmlns:select="clr-namespace:Acad_SheetSet.Select"
-                xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                xmlns:nodes="clr-namespace:Acad_SheetSet.Data.Nodes"
-                xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                xmlns:props="clr-namespace:Acad_SheetSet.Props"
-                xmlns:batch="clr-namespace:Acad_SheetSet.Batch"
-                d:DataContext="{d:DesignInstance local:NumerationVM, IsDesignTimeCreatable=True}"
-                mc:Ignorable="d"
-                Title="Нумарация листов подшивки">
+﻿<controls:MetroWindow x:Class="Acad_SheetSet.Numeration.NumerationView"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:local="clr-namespace:Acad_SheetSet.Numeration"
+                      xmlns:select="clr-namespace:Acad_SheetSet.Select"
+                      xmlns:nodes="clr-namespace:Acad_SheetSet.Data.Nodes"
+                      xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                      xmlns:props="clr-namespace:Acad_SheetSet.Props"
+                      xmlns:batch="clr-namespace:Acad_SheetSet.Batch"
+                      xmlns:controls="http://metro.pik.com/winfx/xaml/controls"
+                      d:DataContext="{d:DesignInstance local:NumerationVM, IsDesignTimeCreatable=True}"
+                      mc:Ignorable="d"
+                      Title="Нумарация листов подшивки">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Wpf/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
         <Grid.Resources>
             <HierarchicalDataTemplate ItemsSource="{Binding Nodes}" DataType="{x:Type nodes:SubsetNode}">
-                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="2"/>
+                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="2" />
             </HierarchicalDataTemplate>
             <DataTemplate DataType="{x:Type nodes:SheetNode}">
-                <Grid >
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
@@ -28,18 +34,22 @@
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Text="{Binding Number}" Margin="1,1,5,1" VerticalAlignment="Center" 
-                               ToolTip="Текущий номер листа"/>
-                    <Border Grid.Column="1" Margin="1,1,10,1" Padding="2" Background="LightGreen" ToolTip="Новый номер листа"
-                            mah:VisibilityHelper.IsVisible="{Binding HasNewNumber}">
-                        <TextBlock Text="{Binding NumberNew}" VerticalAlignment="Center"  />
+                    <TextBlock Grid.Column="0" Text="{Binding Number}" Margin="1,1,5,1" VerticalAlignment="Center"
+                               ToolTip="Текущий номер листа" />
+                    <Border Grid.Column="1" Margin="1,1,10,1" Padding="2" Background="LightGreen"
+                            ToolTip="Новый номер листа"
+                            controls:VisibilityHelper.IsVisible="{Binding HasNewNumber}">
+                        <TextBlock Text="{Binding NumberNew}" VerticalAlignment="Center" />
                     </Border>
-                    <TextBlock Grid.Column="2" Text="{Binding Name}" FontWeight="Medium" VerticalAlignment="Center" Margin="20,1,20,1"/>
-                    <TextBlock Grid.Column="3" Text="{Binding CrossNumber, StringFormat=сквозной \{0\}}" VerticalAlignment="Center"
-                               ToolTip="Текущий сквозной номер" Margin="1"/>
-                    <Border Grid.Column="4" Margin="1,1,10,1" Padding="2" Background="LightGreen" ToolTip="Новый сквозной номер"
-                            mah:VisibilityHelper.IsVisible="{Binding HasNewCrossNumber}">
-                        <TextBlock Text="{Binding CrossNumberNew}" Margin="1" VerticalAlignment="Center"/>
+                    <TextBlock Grid.Column="2" Text="{Binding Name}" FontWeight="Medium" VerticalAlignment="Center"
+                               Margin="20,1,20,1" />
+                    <TextBlock Grid.Column="3" Text="{Binding CrossNumber, StringFormat=сквозной \{0\}}"
+                               VerticalAlignment="Center"
+                               ToolTip="Текущий сквозной номер" Margin="1" />
+                    <Border Grid.Column="4" Margin="1,1,10,1" Padding="2" Background="LightGreen"
+                            ToolTip="Новый сквозной номер"
+                            controls:VisibilityHelper.IsVisible="{Binding HasNewCrossNumber}">
+                        <TextBlock Text="{Binding CrossNumberNew}" Margin="1" VerticalAlignment="Center" />
                     </Border>
                 </Grid>
             </DataTemplate>
@@ -50,14 +60,14 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <select:SSSelectControl Grid.Row="0" DataContext="{Binding Select}" />
-        <TabControl Grid.Row="1" mah:VisibilityHelper.IsVisible="{Binding IsSelected}">
+        <TabControl Grid.Row="1" controls:VisibilityHelper.IsVisible="{Binding IsSelected}">
             <TabItem Header="Нумерация">
                 <!--Нумерация-->
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition />
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <TreeView Grid.Row="0" ItemsSource="{Binding Nodes}" VerticalAlignment="Top">
                         <TreeView.ItemContainerStyle>
@@ -69,10 +79,10 @@
                         </TreeView.ItemContainerStyle>
                     </TreeView>
                     <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="25,1,1,1">
-                        <Button Content="{iconPacks:Material ChevronDoubleUp}" Command="{Binding Collapse}" Margin="2" 
-                                ToolTip="Свернуть все"/>
-                        <Button Content="{iconPacks:Material ChevronDoubleDown}" Command="{Binding Expand}" Margin="2" 
-                                ToolTip="Развернуть все"/>
+                        <Button Content="{iconPacks:Material ChevronDoubleUp}" Command="{Binding Collapse}" Margin="2"
+                                ToolTip="Свернуть все" />
+                        <Button Content="{iconPacks:Material ChevronDoubleDown}" Command="{Binding Expand}" Margin="2"
+                                ToolTip="Развернуть все" />
                     </StackPanel>
                     <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="5" HorizontalAlignment="Center"
                                 Visibility="{Binding IsSelected}" VerticalAlignment="Top">
@@ -83,12 +93,12 @@
                     </StackPanel>
                 </Grid>
             </TabItem>
-            <TabItem Header="Свойства" mah:VisibilityHelper.IsVisible="{Binding IsBimUser}">
-                <props:PropsView DataContext="{Binding PropsVM}"/>
+            <TabItem Header="Свойства" controls:VisibilityHelper.IsVisible="{Binding IsBimUser}">
+                <props:PropsView DataContext="{Binding PropsVM}" />
             </TabItem>
-            <TabItem Header="Обработка" mah:VisibilityHelper.IsVisible="{Binding IsBimUser}">
-                <batch:BatchView DataContext="{Binding BatchVM}"/>
+            <TabItem Header="Обработка" controls:VisibilityHelper.IsVisible="{Binding IsBimUser}">
+                <batch:BatchView DataContext="{Binding BatchVM}" />
             </TabItem>
         </TabControl>
     </Grid>
-</wpf:BaseWindow>
+</controls:MetroWindow>
