--- a/Acad_SheetSet/source/Options/SSOptionsView.xaml
+++ b/Acad_SheetSet/source/Options/SSOptionsView.xaml
@@ -1,13 +1,20 @@
-﻿<wpf:BaseWindow x:Class="Acad_SheetSet.Options.SSOptionsView"
+﻿<mah:MetroWindow x:Class="Acad_SheetSet.Options.SSOptionsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Acad_SheetSet.Options"
-        xmlns:wpf="clr-namespace:NetLib.WPF;assembly=NetLib"
+        xmlns:mah="http://metro.pik.com/winfx/xaml/controls"
         d:DataContext="{d:DesignInstance local:SSOptionsVM, IsDesignTimeCreatable=True}"
         mc:Ignorable="d"
         Title="Настройки">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Wpf/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid VerticalAlignment="Top" Margin="5" HorizontalAlignment="Left">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -20,5 +27,4 @@
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Свойство сквозной нумерации" VerticalAlignment="Center" Margin="2"/>
         <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Options.PropCrossNumberName}" MinWidth="100"/>
     </Grid>
-</wpf:BaseWindow>
-
+</mah:MetroWindow>
