--- a/Acad_SheetSet/source/Numeration/NumerationView.xaml
+++ b/Acad_SheetSet/source/Numeration/NumerationView.xaml
@@ -1,18 +1,21 @@
-﻿<controls:MetroWindow x:Class="Acad_SheetSet.Numeration.NumerationView"
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:local="clr-namespace:Acad_SheetSet.Numeration"
-                      xmlns:select="clr-namespace:Acad_SheetSet.Select"
-                      xmlns:nodes="clr-namespace:Acad_SheetSet.Data.Nodes"
-                      xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                      xmlns:props="clr-namespace:Acad_SheetSet.Props"
-                      xmlns:batch="clr-namespace:Acad_SheetSet.Batch"
-                      xmlns:controls="http://metro.pik.com/winfx/xaml/controls"
-                      d:DataContext="{d:DesignInstance local:NumerationVM, IsDesignTimeCreatable=True}"
-                      mc:Ignorable="d"
-                      Title="Нумарация листов подшивки">
+﻿<controls:MetroWindow
+    x:Class="Acad_SheetSet.Numeration.NumerationView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Acad_SheetSet.Numeration"
+    xmlns:select="clr-namespace:Acad_SheetSet.Select"
+    xmlns:nodes="clr-namespace:Acad_SheetSet.Data.Nodes"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:props="clr-namespace:Acad_SheetSet.Props"
+    xmlns:batch="clr-namespace:Acad_SheetSet.Batch"
+    xmlns:controls="http://metro.pik.com/winfx/xaml/controls"
+    d:DataContext="{d:DesignInstance local:NumerationVM, IsDesignTimeCreatable=True}"
+    GlowBrush="{DynamicResource Pik.Brushes.Accent}"
+    SaveWindowPosition="True"
+    mc:Ignorable="d"
+    Title="Нумарация листов подшивки">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
