--- a/Acad_SheetSet/source/Options/SSOptionsView.xaml
+++ b/Acad_SheetSet/source/Options/SSOptionsView.xaml
@@ -7,6 +7,8 @@
         xmlns:mah="http://metro.pik.com/winfx/xaml/controls"
         d:DataContext="{d:DesignInstance local:SSOptionsVM, IsDesignTimeCreatable=True}"
         mc:Ignorable="d"
+        SaveWindowPosition="True"
+        GlowBrush="{DynamicResource Pik.Brushes.Accent}"
         Title="Настройки">
     <Window.Resources>
         <ResourceDictionary>
